made unsafe code more user-friendly